--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
     <fragment
         tools:layout="@layout/fragment_onboard"
         android:id="@+id/onboardFragment"
-        android:name="com.groom3.goofy.OnboardFragment"
+        android:name="com.groom3.goofy.onboard.OnboardFragment"
         android:label="OnboardFragment" >
         <action
             android:id="@+id/action_onboardFragment_to_registerFragment"
@@ -16,6 +16,6 @@
     <fragment
         tools:layout="@layout/fragment_register"
         android:id="@+id/registerFragment"
-        android:name="com.groom3.goofy.RegisterFragment"
+        android:name="com.groom3.goofy.onboard.RegisterFragment"
         android:label="RegisterFragment" />
 </navigation>
