--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,10 +12,18 @@
         <action
             android:id="@+id/action_onboardFragment_to_registerFragment"
             app:destination="@id/registerFragment" />
+        <action
+            android:id="@+id/action_onboardFragment_to_homeActivity"
+            app:destination="@id/homeActivity" />
     </fragment>
     <fragment
         tools:layout="@layout/fragment_register"
         android:id="@+id/registerFragment"
         android:name="com.groom3.goofy.onboard.RegisterFragment"
         android:label="RegisterFragment" />
+    <activity
+        android:id="@+id/homeActivity"
+        android:name="com.groom3.goofy.home.HomeActivity"
+        android:label="activity_home"
+        tools:layout="@layout/activity_home" />
 </navigation>
