--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -11,9 +11,6 @@
             />
 
 
-        <variable
-            name="UserViewModel"
-            type="com.groom3.goofy.db.UserViewModel" />
     </data>
 
 
@@ -79,29 +76,29 @@
 
         <ImageButton
             android:id="@+id/kakao_register_button"
-            android:layout_width="300dp"
+            android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
             android:adjustViewBounds="true"
             android:padding="0dp"
             android:scaleType="fitCenter"
             android:src="@drawable/kakao_register"
-            app:layout_constraintBottom_toTopOf="@id/google_register_button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
-        <ImageButton
-            android:id="@+id/google_register_button"
-            android:layout_width="300dp"
-            android:layout_height="55dp"
-            android:layout_marginBottom="100dp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:padding="0dp"
-            android:src="@drawable/google_register"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+<!--        <ImageButton-->
+<!--            android:id="@+id/google_register_button"-->
+<!--            android:layout_width="300dp"-->
+<!--            android:layout_height="55dp"-->
+<!--            android:layout_marginBottom="100dp"-->
+<!--            android:adjustViewBounds="true"-->
+<!--            android:scaleType="fitCenter"-->
+<!--            android:padding="0dp"-->
+<!--            android:src="@drawable/google_register"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent" />-->
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
