--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,4 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/homeFragment"
+        android:icon="@drawable/ic_bottom_home_no_select"
+        app:showAsAction="always"
+        android:enabled="true"
+        android:title="입문"
+        tools:ignore="AlwaysShowAction" />
+    <item
+        android:id="@+id/lookFragment"
+        android:icon="@drawable/ic_bottom_look_no_select"
+        app:showAsAction="always"
+        android:title="초급" />
+    <item
+        android:id="@+id/searchFragment"
+        android:icon="@drawable/ic_bottom_search_no_select"
+        app:showAsAction="always"
+        android:title="중급" />
+    <item
+        android:id="@+id/lockerFragment"
+        android:icon="@drawable/ic_bottom_locker_no_select"
+        app:showAsAction="always"
+        android:title="고급" />
+    <item
+        android:id="@+id/emptyFragment"
+        app:showAsAction="always"
+        android:title="" />
 
 </menu>
