--- a/app/src/main/res/drawable/button_background_flo_color.xml
+++ b/app/src/main/res/drawable/button_background_flo_color.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/main_Orange"/>
+    <solid android:color="@color/MainGray"/>
 
     <stroke
         android:width="1dp"
