--- a/app/src/main/res/layout/fragment_onboard.xml
+++ b/app/src/main/res/layout/fragment_onboard.xml
@@ -18,6 +18,7 @@
             android:orientation="horizontal"
             app:layout_constraintBottom_toTopOf="@id/intro_viewpager"
             app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="30dp"
             tools:layout_editor_absoluteX="-1dp">
 
 
@@ -26,21 +27,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:dampingRatio="0.5"
-                app:dotsColor="@color/black"
-                app:dotsStrokeColor="@color/black"
+                app:dotsColor="@color/gray"
                 app:dotsCornerRadius="8dp"
                 app:dotsSize="8dp"
                 app:dotsSpacing="6dp"
+                app:dotsStrokeColor="@color/gray"
                 app:dotsStrokeWidth="2dp"
-                app:stiffness="300"
-                />
-
-
-
-
-
+                app:stiffness="300" />
         </LinearLayout>
-
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/intro_viewpager"
@@ -52,19 +46,23 @@
             app:layout_constraintTop_toBottomOf="@id/indicators_container"
             app:layout_constraintBottom_toTopOf="@id/start_text"/>
 
+<Button
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/start_text"
+    android:gravity="center"
+    android:backgroundTint="#aaaaaa"
+    android:text=" 바로 시작할래요! "
+    android:layout_marginBottom="30dp"
+    android:background="@drawable/edittext_border"
+    android:textSize="20dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/intro_viewpager"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/start_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:gravity="center"
-            android:text="시작하기"
-            android:textSize="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/intro_viewpager"/>
+
+
 
 
 
