--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <color name="BLK">#343536</color>
+    <color name="GRY01">#AEB6BB</color>
+    <color name="GRY02">#AEB6BB</color>
+    <color name="GRY03">#AAAAAA</color>
+    <color name="WHT01">#FFFFFF</color>
+    <color name="WHT02">#F2F3F7</color>
+    <color name="WHT03">#F5F5F5</color>
+
+
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -7,6 +17,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#aaaaaa</color>
     <color name="MainGray">#C5C5C5</color>
+
 
 </resources>
