--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -45,47 +45,47 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/intro_text" />
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:orientation="vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_text_description">
+<!--        <LinearLayout-->
+<!--            android:id="@+id/linearLayout"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            android:gravity="center"-->
+<!--            android:orientation="vertical"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/edit_text_description">-->
 
-            <EditText
-                android:id="@+id/example_title"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:hint="타이틀을 적어보세요" />
+<!--            <EditText-->
+<!--                android:id="@+id/example_title"-->
+<!--                android:layout_width="300dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:hint="타이틀을 적어보세요" />-->
 
-            <EditText
-                android:id="@+id/example_content"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:gravity="top"
-                android:hint="상세내용을 적어보세요"
-                android:lines="10" />
+<!--            <EditText-->
+<!--                android:id="@+id/example_content"-->
+<!--                android:layout_width="300dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:background="@null"-->
+<!--                android:gravity="top"-->
+<!--                android:hint="상세내용을 적어보세요"-->
+<!--                android:lines="10" />-->
 
-        </LinearLayout>
+<!--        </LinearLayout>-->
 
 
         <ImageButton
             android:id="@+id/kakao_register_button"
             android:layout_width="350dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
             android:adjustViewBounds="true"
             android:padding="0dp"
             android:scaleType="fitCenter"
             android:src="@drawable/kakao_register"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/edit_text_description" />
 
 <!--        <ImageButton-->
 <!--            android:id="@+id/google_register_button"-->
