--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -26,11 +26,12 @@
                 android:id="@+id/beach_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="15dp"
                 android:text="제주 사계해변"
                 android:textStyle="bold"
                 android:textColor="@color/BLK"
                 android:textSize="20dp"
+                android:fontFamily="@font/pretendardbold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -41,9 +42,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="패들링 연습"
+                android:fontFamily="@font/pretendardbold"
                 android:textColor="@color/BLK"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/beach_name"
                 app:layout_constraintStart_toStartOf="@+id/beach_name"
                 app:layout_constraintTop_toBottomOf="@+id/beach_name" />
 
@@ -52,28 +54,28 @@
                 android:id="@+id/wave_height"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="60dp"
                 android:layout_marginTop="20dp"
                 android:text="0.17m"
                 android:textColor="@color/BLK"
                 android:textSize="15dp"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:textStyle="bold"
+                android:fontFamily="@font/pretendardbold"
+                app:layout_constraintEnd_toStartOf="@+id/wind_speed"
+                android:layout_marginEnd="30dp"
                 app:layout_constraintHorizontal_bias="0.01"
-                app:layout_constraintStart_toEndOf="@+id/beach_name"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/dash"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="5dp"
+                android:layout_marginTop="16dp"
                 android:text="-"
                 android:textSize="20dp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/wind_speed"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@+id/beach_name"
+                app:layout_constraintHorizontal_bias="0.521"
+                app:layout_constraintStart_toEndOf="@+id/wave_height"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -81,9 +83,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:layout_marginEnd="36dp"
+                android:layout_marginEnd="16dp"
+                android:textStyle="bold"
                 android:text="4.06s"
                 android:textColor="@color/BLK"
+                android:fontFamily="@font/pretendardbold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toEndOf="@+id/beach_name"
@@ -93,58 +97,59 @@
                 android:id="@+id/air_temp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
+                android:fontFamily="@font/pretendardmedium"
                 android:text="기온 8c"
                 android:textColor="@color/BLK"
                 app:layout_constraintEnd_toStartOf="@+id/water_temp"
                 app:layout_constraintHorizontal_bias="0.987"
                 app:layout_constraintStart_toEndOf="@+id/grade_description"
-                app:layout_constraintTop_toBottomOf="@+id/wave_height" />
+                app:layout_constraintTop_toTopOf="@+id/grade_description" />
 
             <TextView
                 android:id="@+id/water_temp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="28dp"
+                android:layout_marginEnd="16dp"
+                android:fontFamily="@font/pretendardmedium"
                 android:text="수온 18c"
                 android:textColor="@color/BLK"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.992"
                 app:layout_constraintStart_toEndOf="@+id/grade_description"
-                app:layout_constraintTop_toBottomOf="@+id/wind_speed" />
+                app:layout_constraintTop_toTopOf="@+id/air_temp" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ImageView
             android:id="@+id/jeju_image"
-            android:layout_width="467dp"
-            android:layout_height="382dp"
-            android:layout_marginTop="16dp"
+            android:layout_width="440dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
             android:src="@drawable/jeju_map"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.517"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="MissingConstraints" />
 
         <Button
-                android:id="@+id/beach_button_ten"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:background="@drawable/circle_background"
-                app:layout_constraintBottom_toBottomOf="@id/jeju_image"
-                app:layout_constraintEnd_toEndOf="@+id/jeju_image"
-                app:layout_constraintHorizontal_bias="0.415"
-                app:layout_constraintStart_toStartOf="@+id/jeju_image"
-                app:layout_constraintTop_toTopOf="@id/jeju_image"
-                app:layout_constraintVertical_bias="0.381"
-                tools:ignore="MissingConstraints" />
+            android:id="@+id/beach_button_ten"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:background="@drawable/circle_background"
+            app:layout_constraintBottom_toBottomOf="@id/jeju_image"
+            app:layout_constraintEnd_toEndOf="@+id/jeju_image"
+            app:layout_constraintHorizontal_bias="0.4"
+            app:layout_constraintStart_toStartOf="@+id/jeju_image"
+            app:layout_constraintTop_toTopOf="@id/jeju_image"
+            app:layout_constraintVertical_bias="0.336"
+            tools:ignore="MissingConstraints" />
 
-            <Button
+        <Button
                 android:id="@+id/beach_button_three"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
                 android:background="@drawable/circle_background"
                 app:layout_constraintBottom_toBottomOf="@id/jeju_image"
                 app:layout_constraintEnd_toEndOf="@+id/jeju_image"
@@ -155,109 +160,109 @@
                 tools:ignore="MissingConstraints" />
 
 
-            <Button
-                android:id="@+id/beach_button_five"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:background="@drawable/circle_background"
-                app:layout_constraintBottom_toBottomOf="@id/jeju_image"
-                app:layout_constraintEnd_toEndOf="@+id/jeju_image"
-                app:layout_constraintHorizontal_bias="0.539"
-                app:layout_constraintStart_toStartOf="@+id/jeju_image"
-                app:layout_constraintTop_toTopOf="@id/jeju_image"
-                app:layout_constraintVertical_bias="0.31"
-                tools:ignore="MissingConstraints" />
+        <Button
+            android:id="@+id/beach_button_five"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:background="@drawable/circle_background"
+            app:layout_constraintBottom_toBottomOf="@id/jeju_image"
+            app:layout_constraintEnd_toEndOf="@+id/jeju_image"
+            app:layout_constraintHorizontal_bias="0.536"
+            app:layout_constraintStart_toStartOf="@+id/jeju_image"
+            app:layout_constraintTop_toTopOf="@id/jeju_image"
+            app:layout_constraintVertical_bias="0.274"
+            tools:ignore="MissingConstraints" />
 
-            <Button
-                android:id="@+id/beach_button_one"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:background="@drawable/circle_background"
-                app:layout_constraintBottom_toBottomOf="@id/jeju_image"
-                app:layout_constraintEnd_toEndOf="@+id/jeju_image"
-                app:layout_constraintHorizontal_bias="0.65"
-                app:layout_constraintStart_toStartOf="@+id/jeju_image"
-                app:layout_constraintTop_toTopOf="@id/jeju_image"
-                app:layout_constraintVertical_bias="0.3"
-                tools:ignore="MissingConstraints" />
+        <Button
+            android:id="@+id/beach_button_one"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:background="@drawable/circle_background"
+            app:layout_constraintBottom_toBottomOf="@id/jeju_image"
+            app:layout_constraintEnd_toEndOf="@+id/jeju_image"
+            app:layout_constraintHorizontal_bias="0.658"
+            app:layout_constraintStart_toStartOf="@+id/jeju_image"
+            app:layout_constraintTop_toTopOf="@id/jeju_image"
+            app:layout_constraintVertical_bias="0.274"
+            tools:ignore="MissingConstraints" />
 
-            <Button
-                android:id="@+id/beach_button_nine"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:background="@drawable/circle_background"
-                app:layout_constraintBottom_toBottomOf="@id/jeju_image"
-                app:layout_constraintEnd_toEndOf="@+id/jeju_image"
-                app:layout_constraintHorizontal_bias="0.336"
-                app:layout_constraintStart_toStartOf="@+id/jeju_image"
-                app:layout_constraintTop_toTopOf="@id/jeju_image"
-                app:layout_constraintVertical_bias="0.419"
-                tools:ignore="MissingConstraints" />
+        <Button
+            android:id="@+id/beach_button_nine"
+            android:layout_width="10dp"
+            android:layout_height="9dp"
+            android:background="@drawable/circle_background"
+            app:layout_constraintBottom_toBottomOf="@id/jeju_image"
+            app:layout_constraintEnd_toEndOf="@+id/jeju_image"
+            app:layout_constraintHorizontal_bias="0.293"
+            app:layout_constraintStart_toStartOf="@+id/jeju_image"
+            app:layout_constraintTop_toTopOf="@id/jeju_image"
+            app:layout_constraintVertical_bias="0.396"
+            tools:ignore="MissingConstraints" />
 
-            <Button
-                android:id="@+id/beach_button_eight"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:background="@drawable/circle_background"
-                app:layout_constraintBottom_toBottomOf="@id/jeju_image"
-                app:layout_constraintEnd_toEndOf="@+id/jeju_image"
-                app:layout_constraintHorizontal_bias="0.367"
-                app:layout_constraintStart_toStartOf="@+id/jeju_image"
-                app:layout_constraintTop_toTopOf="@id/jeju_image"
-                app:layout_constraintVertical_bias="0.694"
-                tools:ignore="MissingConstraints" />
+        <Button
+            android:id="@+id/beach_button_eight"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:background="@drawable/circle_background"
+            app:layout_constraintBottom_toBottomOf="@id/jeju_image"
+            app:layout_constraintEnd_toEndOf="@+id/jeju_image"
+            app:layout_constraintHorizontal_bias="0.312"
+            app:layout_constraintStart_toStartOf="@+id/jeju_image"
+            app:layout_constraintTop_toTopOf="@id/jeju_image"
+            app:layout_constraintVertical_bias="0.747"
+            tools:ignore="MissingConstraints" />
 
-            <Button
-                android:id="@+id/beach_button_two"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:background="@drawable/circle_background"
-                app:layout_constraintBottom_toBottomOf="@id/jeju_image"
-                app:layout_constraintEnd_toEndOf="@+id/jeju_image"
-                app:layout_constraintHorizontal_bias="0.771"
-                app:layout_constraintStart_toStartOf="@+id/jeju_image"
-                app:layout_constraintTop_toTopOf="@id/jeju_image"
-                app:layout_constraintVertical_bias="0.395"
-                tools:ignore="MissingConstraints" />
+        <Button
+            android:id="@+id/beach_button_two"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:background="@drawable/circle_background"
+            app:layout_constraintBottom_toBottomOf="@id/jeju_image"
+            app:layout_constraintEnd_toEndOf="@+id/jeju_image"
+            app:layout_constraintHorizontal_bias="0.809"
+            app:layout_constraintStart_toStartOf="@+id/jeju_image"
+            app:layout_constraintTop_toTopOf="@id/jeju_image"
+            app:layout_constraintVertical_bias="0.37"
+            tools:ignore="MissingConstraints" />
 
-            <Button
-                android:id="@+id/beach_button_four"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:background="@drawable/circle_background"
-                app:layout_constraintBottom_toBottomOf="@id/jeju_image"
-                app:layout_constraintEnd_toEndOf="@+id/jeju_image"
-                app:layout_constraintHorizontal_bias="0.574"
-                app:layout_constraintStart_toStartOf="@+id/jeju_image"
-                app:layout_constraintTop_toTopOf="@id/jeju_image"
-                app:layout_constraintVertical_bias="0.643"
-                tools:ignore="MissingConstraints" />
+        <Button
+            android:id="@+id/beach_button_four"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:background="@drawable/circle_background"
+            app:layout_constraintBottom_toBottomOf="@id/jeju_image"
+            app:layout_constraintEnd_toEndOf="@+id/jeju_image"
+            app:layout_constraintHorizontal_bias="0.601"
+            app:layout_constraintStart_toStartOf="@+id/jeju_image"
+            app:layout_constraintTop_toTopOf="@id/jeju_image"
+            app:layout_constraintVertical_bias="0.674"
+            tools:ignore="MissingConstraints" />
 
-            <Button
-                android:id="@+id/beach_button_six"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:background="@drawable/circle_background"
-                app:layout_constraintBottom_toBottomOf="@id/jeju_image"
-                app:layout_constraintEnd_toEndOf="@+id/jeju_image"
-                app:layout_constraintHorizontal_bias="0.45"
-                app:layout_constraintStart_toStartOf="@+id/jeju_image"
-                app:layout_constraintTop_toTopOf="@id/jeju_image"
-                app:layout_constraintVertical_bias="0.696"
-                tools:ignore="MissingConstraints" />
+        <Button
+            android:id="@+id/beach_button_six"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:background="@drawable/circle_background"
+            app:layout_constraintBottom_toBottomOf="@id/jeju_image"
+            app:layout_constraintEnd_toEndOf="@+id/jeju_image"
+            app:layout_constraintHorizontal_bias="0.452"
+            app:layout_constraintStart_toStartOf="@+id/jeju_image"
+            app:layout_constraintTop_toTopOf="@id/jeju_image"
+            app:layout_constraintVertical_bias="0.747"
+            tools:ignore="MissingConstraints" />
 
-            <Button
-                android:id="@+id/beach_button_seven"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:background="@drawable/circle_background"
-                app:layout_constraintBottom_toBottomOf="@id/jeju_image"
-                app:layout_constraintEnd_toEndOf="@+id/jeju_image"
-                app:layout_constraintHorizontal_bias="0.25"
-                app:layout_constraintStart_toStartOf="@+id/jeju_image"
-                app:layout_constraintTop_toTopOf="@id/jeju_image"
-                app:layout_constraintVertical_bias="0.523"
-                tools:ignore="MissingConstraints" />
+        <Button
+            android:id="@+id/beach_button_seven"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:background="@drawable/circle_background"
+            app:layout_constraintBottom_toBottomOf="@id/jeju_image"
+            app:layout_constraintEnd_toEndOf="@+id/jeju_image"
+            app:layout_constraintHorizontal_bias="0.207"
+            app:layout_constraintStart_toStartOf="@+id/jeju_image"
+            app:layout_constraintTop_toTopOf="@id/jeju_image"
+            app:layout_constraintVertical_bias="0.51"
+            tools:ignore="MissingConstraints" />
 
         <ImageView
             android:layout_width="140dp"
@@ -266,6 +271,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="300dp"
             android:src="@drawable/group"
+            app:layout_constraintBottom_toBottomOf="@id/jeju_image"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/beach_container" />
 
