--- a/app/src/main/res/layout/onboard_container.xml
+++ b/app/src/main/res/layout/onboard_container.xml
@@ -5,23 +5,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".onboard.OnboardFragment"
-        android:orientation="vertical">
-
+        android:orientation="vertical"
+        android:gravity="center|top"
+        android:background="@color/WHT02"
+        >
         <ImageView
             android:id="@+id/onboard_img"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginBottom="30dp"
-            android:src="@drawable/onboardimg" />
+            android:layout_width="234.53dp"
+            android:layout_height="320dp"
+            android:layout_marginBottom="20dp"
 
+            android:src="@drawable/onboardimg" />
 
         <TextView
             android:id="@+id/description_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center|top"
+            android:gravity="center"
             android:text="해파리 등 위험한 해양생물의 출몰지역과\n
             시기를 알아보고 입수해야 합니다."
             android:textColor="@color/black"
